--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 
     <p>Calendar</p>
 
-    <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=300&amp;wkst=1&amp;hl=en_GB&amp;bgcolor=%23FFFFFF&amp;src=katia.guliaeva%40gmail.com&amp;color=%2329527A&amp;ctz=Europe%2FMoscow" style=" border-width:0 " width="300" height="300" frameborder="0" scrolling="no"></iframe><p><a href="#" class="myButton">Book it!</a><p>
+    <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=300&amp;wkst=1&amp;hl=en_GB&amp;bgcolor=%23FFFFFF&amp;src=katia.guliaeva%40gmail.com&amp;color=%2329527A&amp;ctz=Europe%2FMoscow" style=" border-width:0 " width="300" height="300" frameborder="0" scrolling="no"></iframe>
+      <p>
+          <a href="#" class="myButton" >Book it!</a>
+         <form action="auth.php" method="get"></form>
+      <p>
   </header>
 
 </section>
